--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.4",
+    "@types/react": "^17.0.32",
+    "typescript": "^4.4.4"
   }
 }
